Change Git history instead of just deleting old reports

--- a/.github/workflows/gen-report-manual.yml
+++ b/.github/workflows/gen-report-manual.yml
@@ -17,6 +17,9 @@ on:
         required: true
         default: false
 
+# Don't run until the `./rm-reports.yml` workflow is finished running.
+concurrency: rm-reports
+
 jobs:
   gen-report:
     name: ${{ github.event.inputs.project }}:${{ github.event.inputs.jobset }}
