--- a/.github/workflows/gen-reports.yml
+++ b/.github/workflows/gen-reports.yml
@@ -14,6 +14,9 @@ on:
   schedule:
    - cron: '0 */1 * * *'
 
+# Don't run until the `./rm-reports.yml` workflow is finished running.
+concurrency: rm-reports
+
 jobs:
   nixpkgs-trunk:
     name: nixpkgs-trunk
