Don't include reports in sitemap

--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,12 @@ plugins:
 
 remote_theme: jekyll/minima
 
+defaults:
+  - scope:
+      path: "_posts/**/*.md"
+    values:
+      sitemap:         false
+
 exclude:
   - Gemfile
   - Gemfile.lock
