--- a/.github/workflows/gen-reports.yml
+++ b/.github/workflows/gen-reports.yml
@@ -31,7 +31,7 @@ jobs:
       project: nixpkgs
       jobset: nixpkgs-22.11-darwin
   nixpkgs-haskell-updates:
-    name: python-updates
+    name: haskell-updates
     uses: ./.github/workflows/gen-report.yml
     with:
       project: nixpkgs
